# invoiceParser

./: .gitignore  HOWTO.md  README.md  plan.md  pyproject.toml
sample_outputs/: example_output.json
src/invoice_parser/: __init__.py  config.py
src/invoice_parser/core/: exceptions.py  image_preprocessor.py  parser.py
src/invoice_parser/extractors/: __init__.py  base.py  gemini.py
src/invoice_parser/schema/: models.py
src/invoice_parser/validators/: __init__.py  gst.py  tax.py
tests/: conftest.py  test_gst_validator.py  test_parser.py  test_real_invoice.py  test_schema.py  test_tax_validator.py
